# oscar-hooks

./: .pre-commit-hooks.yaml  README.md  pyproject.toml
.windsurf/rules/: precommit-hooks.md
oscar_hooks/: __init__.py  pydantic_yaml_guard.py  telegram_token_guard.py
tests/: test_pydantic_yaml_guard.py
